crates/cli/tests/snapshots/check@field_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/field_type_mismatch.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/field_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[15] Error:[0m Type mismatch. Expected I32, but got Bool
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/field_type_mismatch.nemo:2:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mtrue [38;5;249m}[0m
 [38;5;240m  │[0m           ──┬──  
 [38;5;240m  │[0m             ╰──── Type mismatch. Expected I32, but got Bool
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected Unit, but got F
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/field_type_mismatch.nemo:2:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0mF { x = true }
 [38;5;240m  │[0m   ───────┬──────  
 [38;5;240m  │[0m          ╰──────── Type mismatch. Expected Unit, but got F
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 2 errors"
