crates/cli/tests/snapshots/check@invalid_literal.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/invalid_literal.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/invalid_literal.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[02] Error:[0m Invalid literal couldn't be parsed
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/invalid_literal.nemo:1:12[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m1000000000000000000000000000000000000000000000000000000000000
 [38;5;240m  │[0m            ──────────────────────────────┬──────────────────────────────  
 [38;5;240m  │[0m                                          ╰──────────────────────────────── Invalid literal couldn't be parsed
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
