crates/cli/tests/snapshots/check@lambda.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/lambda.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/lambda.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[15] Error:[0m Type mismatch. Expected i32, but got f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/lambda.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m10.0[38;5;249m;[0m
 [38;5;240m  │[0m              ──┬─  
 [38;5;240m  │[0m                ╰─── Type mismatch. Expected i32, but got f32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected i32, but got f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/lambda.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mw[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m_[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m\[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mf32[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                                               ─┬─  
 [38;5;240m  │[0m                                                ╰─── Type mismatch. Expected i32, but got f32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected i32, but got f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/lambda.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m9 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0mx + 1.0[38;5;249m;[0m
 [38;5;240m  │[0m              ───┬───  
 [38;5;240m  │[0m                 ╰───── Type mismatch. Expected i32, but got f32
[38;5;246m───╯[0m

[31m[11] Error:[0m Mismatched arg count. Expected 1 argument, but got 2
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/lambda.nemo:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m11 │[0m ╭─▶ [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mw[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m_[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249m_[0m[38;5;249mc[0m[38;5;249mo[0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m\(x, y) {
 [38;5;240m   ┆[0m ┆   
 [38;5;246m13 │[0m ├─▶     }[38;5;249m;[0m
 [38;5;240m   │[0m │            
 [38;5;240m   │[0m ╰──────────── Mismatched arg count. Expected 1 argument, but got 2
[38;5;246m────╯[0m


----- stderr -----
Error: "Check failed with 4 errors"
