crates/cli/tests/snapshots/check@non_array_idx.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/non_array_idx.nemo
input_file: crates/cli/tests/check/non_array_idx.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[09] Error:[0m Tried to index into a non-array type i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m10[38;5;249m[[0m[38;5;249m4[0m[38;5;249m][0m
 [38;5;240m  │[0m           ─┬  
 [38;5;240m  │[0m            ╰── Tried to index into a non-array type i32
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
